# opencv-thinning-repro

./: .gitignore  CMakeLists.txt  ReadMe.md  configure_opencv.ps1  vcpkg.json
src/: CMakeLists.txt  main.cpp
